src/test/ui/type-alias-impl-trait/nested-tait-inference.stderr
error[E0277]: the trait bound `(): Foo<impl Debug>` is not satisfied
  --> $DIR/nested-tait-inference.rs:15:5
   |
LL |     ()
   |     ^^ the trait `Foo<impl Debug>` is not implemented for `()`
   |
   = help: the following implementations were found:
             <() as Foo<()>>

error: could not find defining uses
  --> $DIR/nested-tait-inference.rs:6:13
   |
LL | type FooX = impl Debug;
   |             ^^^^^^^^^^

error: aborting due to 2 previous errors

For more information about this error, try `rustc --explain E0277`.
